--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
       <div class="container pt-5">
         <p>
-            Elevate Code is an educational <a href='https://www.youtube.com/user/ElevateCode'>Youtube channel</a> and blog focused on advanced computer programming. Breaking down some of the more complex bits of coding into something simple...so you can get the work done and get back to looking at <a href='http://www.reddit.com/r/cats'>cats on the internet</a>. 
+            Elevate Code is an educational <a href='https://www.youtube.com/user/ElevateCode'>Youtube channel</a> and blog about computer programming. Breaking down some of the more complex bits of coding into something simple...so you can get the work done and get back to looking at <a href='http://www.reddit.com/r/cats'>cats on the internet</a>. 
         </p>
       </div>
   
